Display an image with API

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
         <title>Just Stream it</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/styles.css">
-        <script scr="script/main.js"></script>
     </head>
 
     <body>
         <header class="header">
             <nav class="navbar">
                 <a href="/">
-                    <img src="https://user.oc-static.com/upload/2020/09/18/16004298163529_P5.png" alt="JustStreamIt" class="headerLogo">
+                    <img src="https://user.oc-static.com/upload/2020/09/18/16004298163529_P5.png" alt="Logo Just Stream It" class="headerLogo">
                 </a>
                 <ul class="nav-links">
                     <div class="menu">
@@ -23,13 +22,13 @@
                 </ul>
             </nav>
         </header>
-        
+
         <main>
             <article class="the-best-movie">
                 <h1>best movie title</h1>
                 <button name="play">Play</button>
                 <p>Movie resum text</p>
-                <img src="#" alt="best-movie-thumbnail">
+                <img src="" alt="Image du meilleur film", id="best-movie-img">
             </article>
             <article class="others-best-movies">
                 <h2>Films les mieux notés</h2>
@@ -48,5 +47,6 @@
                 </section>
             </article>
         </main>
+        <script src="script/main.js"></script>
     </body>
 </html>
