--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </header>
 
         <main>
-            <article class="the-best-movie">
-                <h1>best movie title</h1>
+            <article id="the-best-movie">
+                <h1>Best movie title</h1>
+                <img src="" alt="Image du meilleur film", id="best-movie-img">
                 <button name="play">Play</button>
                 <p>Movie resum text</p>
-                <img src="" alt="Image du meilleur film", id="best-movie-img">
             </article>
             <article class="others-best-movies">
                 <h2>Films les mieux notés</h2>
