--- a/index.html
+++ b/index.html
@@ -23,15 +23,41 @@
 
         <main>
             <article id="the-best-movie">
-                <h1>Best movie title</h1>
+                <h1>Titre du meilleur film</h1>
                 <img src="" alt="Image du meilleur film", id="best-movie-img">
                 <button name="play">Play</button>
-                <p>Movie resum text</p>
+                <p>Descrition meilleur film</p>
             </article>
             <article class="others-best-movies">
                 <h2>Films les mieux notés</h2>
-                <button name="left">Left</button>
-                <button name="right">Right</button>
+                    <section class="carousel">
+                        <ul id="carousel-items">
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                            <li class="carousel-item">
+                                <img src="https://placeimg.com/572/322/animals">
+                            </li>
+                        </ul>
+                        <button id="slideLeft" type="button">Slide left</button>
+                        <button id="slideRight" type="button">Slide right</button>
+                    </section>
+                <ul class="best-movies-slider"></ul>
             </article>
             <article class="best-movie-by-categories">
                 <section class="category-1">
