--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
             <article class="others-best-movies">
                 <h2>Films les mieux notés</h2>
                     <section class="carousel">
+                        <button id="slideLeft" type="button"><</button>
                         <ul id="carousel-items">
                             <li class="carousel-item">
                                 <img src="https://placeimg.com/572/322/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/310/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/333/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/325/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/350/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/372/animals">
                             </li>
                             <li class="carousel-item">
-                                <img src="https://placeimg.com/572/322/animals">
+                                <img src="https://placeimg.com/572/300/animals">
                             </li>
                         </ul>
-                        <button id="slideLeft" type="button">Slide left</button>
-                        <button id="slideRight" type="button">Slide right</button>
+                        <button id="slideRight" type="button">></button>
                     </section>
                 <ul class="best-movies-slider"></ul>
             </article>
