Declare all variables

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Just Stream it</title>
         <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
         <link rel="stylesheet" href="styles/styles.css">
-        <script src="scripts/main.js" async></script>
+        <script type="module" src="scripts/main.js" async></script>
         <script src="scripts/buttons.js" async></script>
     </head>
     <body>
