Display all categorie carousel

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </section>
             </article>
             <article id="category-3">
-                <h3>Documentaire</h3>
+                <h3>Thriller</h3>
                 <section class="carousel">
                     <button id="slideLeftCategoryThree" type="button"><</button>
                     <ul id="carousel-items-category-three"></ul>
