Same class for carousel objects

--- a/index.html
+++ b/index.html
@@ -33,33 +33,33 @@
             <article id="others-best-movies">
                 <h2>Films les mieux notés</h2>
                     <section class="carousel">
-                        <button id="slideLeftOthersBestMovies" type="button"><</button>
-                        <ul id="carousel-items-other-best-movies"></ul>
-                        <button id="slideRightOthersBestMovies" type="button">></button>
+                        <button class="carousel-button" id="slideLeftOthersBestMovies" type="button"><</button>
+                        <ul class="carousel-items" id="carousel-items-other-best-movies"></ul>
+                        <button class="carousel-button" id="slideRightOthersBestMovies" type="button">></button>
                     </section>
             </article>
             <article id="category-1">
                 <h3>Animation</h3>
                 <section class="carousel">
-                    <button id="slideLeftCategoryOne" type="button"><</button>
-                    <ul id="carousel-items-category-one"></ul>
-                    <button id="slideRightCategoryOne" type="button">></button>
+                    <button class="carousel-button" id="slideLeftCategoryOne" type="button"><</button>
+                    <ul class="carousel-items" id="carousel-items-category-one"></ul>
+                    <button class="carousel-button" id="slideRightCategoryOne" type="button">></button>
                 </section>
             </article>
             <article id="category-2">
                 <h3>Aventure</h3>
                 <section class="carousel">
-                    <button id="slideLeftCategoryTwo" type="button"><</button>
-                    <ul id="carousel-items-category-two"></ul>
-                    <button id="slideRightCategoryTwo" type="button">></button>
+                    <button class="carousel-button" id="slideLeftCategoryTwo" type="button"><</button>
+                    <ul class="carousel-items" id="carousel-items-category-two"></ul>
+                    <button class="carousel-button" id="slideRightCategoryTwo" type="button">></button>
                 </section>
             </article>
             <article id="category-3">
                 <h3>Thriller</h3>
                 <section class="carousel">
-                    <button id="slideLeftCategoryThree" type="button"><</button>
-                    <ul id="carousel-items-category-three"></ul>
-                    <button id="slideRightCategoryThree" type="button">></button>
+                    <button class="carousel-button" id="slideLeftCategoryThree" type="button"><</button>
+                    <ul class="carousel-items" id="carousel-items-category-three"></ul>
+                    <button class="carousel-button" id="slideRightCategoryThree" type="button">></button>
                 </section>
             </article>
         </main>
