Modify color, margin and font size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul class="nav-links">
                     <div class="menu">
                         <li><a href="/">Accueil</a></li>
-                        <li class="genres">Catégories
+                        <li class="genres"><a href="#">Catégories</a>
                             <ul id="header-genres-list"></ul>
                         </li>
                     </div>
