Succeed the W3C markup validation

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
             <nav id="navbar">
                 <div id="logo"><a href="/">Just Stream It</a></div>
                 <ul class="nav-links">
-                    <div class="menu">
+                    <li class="menu">
                         <li><a href="/">Accueil</a></li>
                         <li class="genres"><a href="#">Catégories</a>
                             <ul id="header-genres-list"></ul>
                         </li>
-                    </div>
                 </ul>
             </nav>
         </header>
@@ -30,35 +29,35 @@
             </article>
             <article id="others-best-movies">
                 <h2>Films les mieux notés</h2>
-                    <section class="carousel">
-                        <button class="carousel-button" id="slideLeftOthersBestMovies" type="button"><</button>
+                    <div class="carousel">
+                        <button class="carousel-button" id="slideLeftOthersBestMovies" type="button">&lt;</button>
                         <ul class="carousel-items" id="carousel-items-other-best-movies"></ul>
-                        <button class="carousel-button" id="slideRightOthersBestMovies" type="button">></button>
-                    </section>
+                        <button class="carousel-button" id="slideRightOthersBestMovies" type="button">&gt;</button>
+                    </div>
             </article>
             <article id="category-1">
                 <h3>Animation</h3>
-                <section class="carousel">
-                    <button class="carousel-button" id="slideLeftCategoryOne" type="button"><</button>
+                <div class="carousel">
+                    <button class="carousel-button" id="slideLeftCategoryOne" type="button">&lt;</button>
                     <ul class="carousel-items" id="carousel-items-category-one"></ul>
-                    <button class="carousel-button" id="slideRightCategoryOne" type="button">></button>
-                </section>
+                    <button class="carousel-button" id="slideRightCategoryOne" type="button">&gt;</button>
+                </div>
             </article>
             <article id="category-2">
                 <h3>Aventure</h3>
-                <section class="carousel">
-                    <button class="carousel-button" id="slideLeftCategoryTwo" type="button"><</button>
+                <div class="carousel">
+                    <button class="carousel-button" id="slideLeftCategoryTwo" type="button">&lt;</button>
                     <ul class="carousel-items" id="carousel-items-category-two"></ul>
-                    <button class="carousel-button" id="slideRightCategoryTwo" type="button">></button>
-                </section>
+                    <button class="carousel-button" id="slideRightCategoryTwo" type="button">&gt;</button>
+                </div>
             </article>
             <article id="category-3">
                 <h3>Thriller</h3>
-                <section class="carousel">
-                    <button class="carousel-button" id="slideLeftCategoryThree" type="button"><</button>
+                <div class="carousel">
+                    <button class="carousel-button" id="slideLeftCategoryThree" type="button">&lt;</button>
                     <ul class="carousel-items" id="carousel-items-category-three"></ul>
-                    <button class="carousel-button" id="slideRightCategoryThree" type="button">></button>
-                </section>
+                    <button class="carousel-button" id="slideRightCategoryThree" type="button">&gt;</button>
+                </div>
             </article>
         </main>
     </body>
